# marbl-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  grammar.bnf  run.sh
examples/: hello.mrbl
src/app/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ast.hpp  printer.cpp  printer.hpp
src/core/: CMakeLists.txt  errors.hpp  tokens.hpp  utils.cpp  utils.hpp
src/interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  lexer.l
src/llvm_codegen/: CMakeLists.txt  llvm_codegen.cpp  llvm_codegen.hpp
src/marbl/: CMakeLists.txt  marbl.cpp  marbl.hpp
src/parser/: CMakeLists.txt  parser.hpp  parser_exception.hpp
